--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
 
-  
+  <div class="bg-gray-500 w-32 h-32">
+    Header
+  </div>
+
+  <div class="bg-gray-200 w-1/2 h-32">
+    Main
+  </div>
+
+  <div class="bg-gray-800 w-full h-32">
+    Footer
+  </div>
 </body>
 </html>
