--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
 </head>
 <body>
 
-  <div class="bg-gray-500 w-32 h-32">
+  <!-- <div class="bg-gray-500 w-32 h-32">
     Header
   </div>
 
-  <div class="bg-gray-200 w-1/2 h-32">
+  <div class="bg-gray-200 w-3/12 h-32">
     Main
   </div>
 
   <div class="bg-gray-800 w-full h-32">
     Footer
-  </div>
+  </div> -->
+
+  <!-- Practice 1 - create 9 boxes that are 20px wide and 24 pixels tall, also each box should represent on of the shades of color blue -->
+
+  <div class="bg-blue-100 w-5 h-6">1</div>
+  <div class="bg-blue-200 w-5 h-6">2</div>
+  <div class="bg-blue-300 w-5 h-6">3</div>
+  <div class="bg-blue-400 w-5 h-6">4</div>
+  <div class="bg-blue-500 w-5 h-6">5</div>
+  <div class="bg-blue-600 w-5 h-6">6</div>
+  <div class="bg-blue-700 w-5 h-6">7</div>
+  <div class="bg-blue-800 w-5 h-6">8</div>
+  <div class="bg-blue-900 w-5 h-6">9</div>
 </body>
 </html>
