margin & padding lesson

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <!-- <div class="bg-gray-500 w-32 h-32">
+  <!-- Adding background color, width & height 
+  <div class="bg-gray-500 w-32 h-32">
     Header
   </div>
 
@@ -21,7 +22,7 @@
     Footer
   </div> -->
 
-  <!-- Practice 1 - create 9 boxes that are 20px wide and 24 pixels tall, also each box should represent on of the shades of color blue -->
+  <!-- Practice 1 - create 9 boxes that are 20px wide and 24 pixels tall, also each box should represent on of the shades of color blue 
 
   <div class="bg-blue-100 w-5 h-6">1</div>
   <div class="bg-blue-200 w-5 h-6">2</div>
@@ -31,6 +32,11 @@
   <div class="bg-blue-600 w-5 h-6">6</div>
   <div class="bg-blue-700 w-5 h-6">7</div>
   <div class="bg-blue-800 w-5 h-6">8</div>
-  <div class="bg-blue-900 w-5 h-6">9</div>
+  <div class="bg-blue-900 w-5 h-6">9</div> -->
+
+  <!-- Adding margin & padding -->
+
+  <div class="bg-blue-500 w-32 h-32 mx-4 my-4">box-1</div>
+  <div class="bg-blue-700 w-32 h-32 px-4 py-4">box-2</div>
 </body>
 </html>
