added class for font-family

--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
   <div class="bg-blue-800 w-5 h-6">8</div>
   <div class="bg-blue-900 w-5 h-6">9</div> -->
 
-  <!-- Adding margin & padding -->
+  <!-- Adding margin & padding 
 
   <div class="bg-blue-500 w-32 h-32 mx-4 my-4">box-1</div>
-  <div class="bg-blue-700 w-32 h-32 px-4 py-4">box-2</div>
+  <div class="bg-blue-700 w-32 h-32 px-4 py-4">box-2</div>  -->
+
+  <!-- Styling Text - Font-Family -->
+  <p class="font-mono w-1/2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, beatae ipsum sunt voluptate praesentium sapiente!</p>
 </body>
 </html>
