added class for text-size

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   <div class="bg-blue-700 w-32 h-32 px-4 py-4">box-2</div>  -->
 
   <!-- Styling Text - Font-Family -->
-  <p class="font-mono w-1/2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, beatae ipsum sunt voluptate praesentium sapiente!</p>
+  <p class="font-mono text-base w-1/2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, beatae ipsum sunt voluptate praesentium sapiente!</p>
 </body>
 </html>
